<?xml version="1.0"?>
<package format="2">
  <name>gravity_compensation</name>
  <version>0.0.0</version>
  <description>The gravity_compensation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="malgorzata@todo.todo">malgorzata</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>robot_class</depend>
  <depend>eigen_utils</depend>
  <depend>simple_log</depend>
  <depend>basic_controllers</depend>
  <depend>dynamic_models</depend>
  <test_depend>centauro_gazebo</test_depend>
  <test_depend>centauro_control</test_depend>
  <test_depend>robot_class_ros_extension</test_depend> 
  <test_depend>tests_common</test_depend>

 <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
